package com.example.ute.strategy;

public interface PaymentStrategy {
    boolean pay(double amount);
}


